--- a/08_exercises.html
+++ b/08_exercises.html
@@ -483,6 +483,7 @@ The number of counts per minute of radioactive product from the reaction was mea
 <ul>
 <li>Exercise: <a href="./08_3_puromycin.html">Exercise3</a></li>
 <li>Data path: Not required</li>
+<li>Solution: <a href="./08_3_puromycin_sol.html">Solution3</a></li>
 </ul>
 <hr />
 </div>
